--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,13 @@ body {
 /* and above unless overwritten below */
 
 body {
-  background: #fcc;
+  background: rgb(72, 72, 72);
 }
 
+header {
+  background-color: black;
+  color: beige;
+}
 
 nav {
   display: flex;
@@ -57,8 +61,22 @@ section.open {
   /* applies to screens wider than 499px */
 
   body {
-    background: #cfc;
+    background: rgb(212, 230, 251);
   }
+
+  header {
+    background-color: black;
+    color: beige;
+  }
+
+  nav {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+  }
+
 }
 
 
@@ -70,6 +88,12 @@ section.open {
   /* applies to screens wider than 999px */
 
   body {
-    background: #ccf;
+    background: rgb(212, 230, 251);
+  }
+
+  header {
+
+    background-color: black;
+    color: beige;
   }
 }
