--- a/css/styles.css
+++ b/css/styles.css
@@ -84,15 +84,25 @@ body {
   /* applies to screens wider than 999px */
 
   body {
-    background-color: #f5f5f5;
+    background-color: #e1e9f8;
     color: #333333;
-    margin-top: 6em;
-    padding: 1em;
+    margin-top: 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 80vh;
+    width: 100%;
+    margin: auto;
   }
 
   .black {
     color: black;
-    padding-bottom: 10px;
+  }
+
+  #pageTitle {
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
   }
 
   header {
@@ -167,4 +177,26 @@ body {
     width: 0%;
   }
 
+
+
+  #videoCard {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: auto auto;
+    align-items: center;
+  }
+
+  .videoCard-title {
+    padding-left: 40px;
+    grid-column: 1/-1;
+    grid-row: 1;
+  }
+
+  #videoCard img {
+    width: 600px;
+  }
+
+  .videoCard-specifications {
+    padding-left: 2em;
+  }
 }
