--- a/css/styles.css
+++ b/css/styles.css
@@ -72,8 +72,6 @@ body {
     width: 100%;
   }
 
-
-
 }
 
 
@@ -86,7 +84,6 @@ body {
   body {
     background-color: #e1e9f8;
     color: #333333;
-    margin-top: 4em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -101,6 +98,7 @@ body {
 
   #pageTitle {
     top: 50%;
+    margin-top: 4em;
     transform: translateY(-50%);
     text-align: center;
   }
@@ -202,4 +200,32 @@ body {
   .videoCard-specifications {
     padding-left: 2em;
   }
+
+  .pros-cons-container {
+
+    display: flex;
+    justify-content: end;
+    margin-bottom: 20px;
+    align-self: center;
+
+
+  }
+
+  .pros,
+  .cons {
+    width: 80%;
+    list-style: none;
+  }
+
+  .pros h2,
+  .cons h2 {
+    margin-bottom: 5px;
+  }
+
+  .pros ul,
+  .cons ul {
+    padding: 0;
+    margin: 0;
+  }
+
 }
