--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ body {
   /* applies to screens wider than 999px */
 
   body {
-    background-color: #e3ebf8;
+    background-color: #e6eef9;
     color: #333333;
     display: flex;
     justify-content: center;
@@ -194,15 +194,15 @@ body {
     width: 600px;
   }
 
-
   .pros-cons-container {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
     align-self: center;
     width: 800px;
-    padding-left: 15%;
+    padding-left: 5%;
     min-width: 70%;
+    gap: 20%;
   }
 
   .pros,
@@ -253,8 +253,63 @@ body {
 
   .amazon-logo img {
     height: 120px;
-    padding-top: 10px;
+    padding-top: 10px
   }
 
+  .otherVideocardsTitle {
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 30px;
+  }
+
+  .extraVideocards {
+    display: contents;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .extraVideocards span {
+    display: inline-block;
+    background-color: #DC191B;
+    color: white;
+    padding: 1px 75px;
+    font-size: 15px;
+    text-align: justify;
+
+  }
+
+  .extraVideocards .red-line {
+    width: 100%;
+    border: none;
+    height: 5px;
+    background-color: #DC191B;
+    margin-top: -3px;
+  }
+
+  .theVideoCards {
+    position: absolute;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    align-items: center;
+    column-gap: 30px;
+    width: 850px;
+    align-items: start;
+  }
+
+  .theVideoCards img {
+    height: 140px;
+  }
+
+  .theVideoCards a {
+    color: red;
+    transition: 0.5s;
+  }
+
+  .theVideoCards a:hover {
+    background-color: #DC191B;
+    color: #f5f5f5;
+    padding: 5px;
+    border-radius: 3px;
+  }
 
 }
