--- a/css/styles.css
+++ b/css/styles.css
@@ -5,35 +5,27 @@
 * {
   padding: 0;
   margin: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
   font-family: "Nunito", sans-serif;
   background: #e6eef9;
+
 }
 
 header {
   background-color: #000000;
   position: fixed;
-  top: 0;
-  height: 80px;
+  top: -1;
+  height: 65px;
   width: 100%;
-  display: flex;
   justify-content: space-between;
 }
 
 .siteName h2 {
   color: beige;
   font-size: 21px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 10px;
-  padding-left: 10px;
+  padding: 5px 10px;
   font-weight: bold;
 }
 
@@ -52,17 +44,11 @@ nav {
   background: black;
   width: 100%;
   text-align: center;
-
-
+  padding-top: 20%;
 }
 
 nav.open {
-  display: flex;
-  position: fixed;
   transform: translateX(0);
-  justify-content: center;
-  background: black;
-  height: 100%;
 }
 
 #menuToggler {
@@ -70,76 +56,19 @@ nav.open {
   top: 0;
   right: 0;
   z-index: 1;
-  padding: 15px;
-  padding-right: 30px;
+  padding: 5px 20px;
   color: white;
   font-size: 40px;
 }
 
-nav ul {
-  margin-right: 20px;
-}
-
-nav ul li {
-  line-height: 80px;
-  margin: 0 5px;
-}
-
-nav ul li a {
+nav a {
+  display: flex;
+  justify-content: center;
   color: beige;
   font-size: 17px;
   position: relative;
-}
-
-nav ul li a::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0;
-  height: 2px;
-  background: beige;
-  transition: width 0.3s;
-}
-
-nav ul li a:hover::after,
-a.active::after {
-  width: 100%;
-}
-
-a.active,
-a:hover {
-  font-size: 19px;
-  font-weight: bold;
-}
-
-nav a#aboutUs {
-  background-color: #5badf0;
-  color: black;
-  padding: 2mm;
-  border-radius: 3px;
-  font-weight: 600;
-}
-
-nav a#aboutUs:hover {
-  background-color: #333333;
-  color: #f5f5f5;
-  transition: background-color 1.5s, color 1.5s;
-}
-
-nav a#aboutUs::after {
-  content: none;
-}
-
-nav a#aboutUs:hover::before {
-  width: 0;
-}
-
-#menu {
-  font-size: 30px;
-  color: white;
-  margin-right: 40px;
   line-height: 80px;
+  margin: 0 5px;
 }
 
 main {
@@ -150,23 +79,20 @@ img {
   height: 100px;
 }
 
-/* applies to screens smaller than 500px (first breakpoint) */
-/* and above unless overwritten below */
-
-
-
 /* TABLET STYLES */
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 501px) {
 
   #menuToggler {
     display: none;
   }
 
   nav {
-    display: flex;
-    flex-direction: row;
-    transform: translateX(0%)
+    display: none;
+  }
+
+  body {
+    background: pink;
   }
 
 
