--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,12 @@
 * {
   padding: 0;
   margin: 0;
+  text-decoration: none;
 }
 
 body {
   font-family: "Nunito", sans-serif;
   background: #e6eef9;
-
 }
 
 header {
@@ -30,21 +30,28 @@ header {
 }
 
 .siteName h2:last-of-type {
-  margin-top: -10px;
-  margin-left: 35px;
+  margin: -10px 35px;
 }
 
 nav {
+  display: flex;
   position: fixed;
-  top: 0;
-  right: auto;
   height: 100%;
+  width: 100%;
   transform: translateX(100%);
   transition: 0.5s;
   background: black;
-  width: 100%;
-  text-align: center;
-  padding-top: 20%;
+  align-items: center;
+  justify-content: center;
+}
+
+nav a {
+  display: flex;
+  justify-content: center;
+  color: beige;
+  font-size: 20px;
+  line-height: 80px;
+  margin: 0 5px;
 }
 
 nav.open {
@@ -55,20 +62,9 @@ nav.open {
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1;
   padding: 5px 20px;
   color: white;
   font-size: 40px;
-}
-
-nav a {
-  display: flex;
-  justify-content: center;
-  color: beige;
-  font-size: 17px;
-  position: relative;
-  line-height: 80px;
-  margin: 0 5px;
 }
 
 main {
@@ -81,60 +77,42 @@ img {
 
 /* TABLET STYLES */
 
-@media screen and (min-width: 501px) {
+@media screen and (min-width: 500px) {
 
-  #menuToggler {
-    display: none;
+  .siteName {
+    display: flex;
+    margin-top: 15px;
   }
 
-  nav {
-    display: none;
+  .siteName h2:last-of-type {
+    margin: 0 -12px;
   }
-
-  body {
-    background: pink;
-  }
-
-
 }
 
 
 /* DESKTOP STYLES */
 
 @media screen and (min-width: 1000px) {
-
-  /* applies to screens wider than 999px */
-  nav ul li a {
-    font-size: 16px;
-
-  }
-
-  #menu {
-    display: block;
-  }
-
-  ul {
-    position: fixed;
+  nav {
     width: 100%;
-    height: 100vh;
-    background: #2c3e50;
-    top: 80px;
-    left: 0;
-    text-align: center;
-  }
-
-  nav ul li {
-    display: block;
-  }
-
-  nav ul li a {
-    font-size: 20px;
+    transform: none;
+    padding-top: 0;
+    display: flex;
+    justify-content: center;
 
   }
 
-  a:hover,
-  a.active {
-    background-color: none;
-    color: #0082e6;
+  #menuToggler {
+    display: none;
   }
+
+  header {
+    width: 100%;
+  }
+
+
+  main {
+    padding-top: 0;
+  }
+
 }
