--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,8 @@ body {
 header {
   background-color: #000000;
   position: fixed;
-  top: -1;
   height: 65px;
   width: 100%;
-  justify-content: space-between;
 }
 
 .siteName h2 {
@@ -33,11 +31,21 @@ header {
   margin: -10px 35px;
 }
 
+#menuToggler {
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 5px 20px;
+  color: white;
+  font-size: 40px;
+}
+
 nav {
   display: flex;
+  overflow: auto;
   position: fixed;
-  height: 100%;
   width: 100%;
+  height: 100%;
   transform: translateX(100%);
   transition: 0.5s;
   background: black;
@@ -50,30 +58,37 @@ nav a {
   justify-content: center;
   color: beige;
   font-size: 20px;
-  line-height: 80px;
-  margin: 0 5px;
+  line-height: 60px;
+
 }
 
 nav.open {
   transform: translateX(0);
 }
 
-#menuToggler {
-  position: fixed;
-  top: 0;
-  right: 0;
-  padding: 5px 20px;
-  color: white;
-  font-size: 40px;
+.active {
+  background: white;
+  color: black;
+  font-weight: bold;
+  line-height: 40px;
+  border-radius: 10px;
 }
 
 main {
-  padding: 85px 15px;
+  padding: 75px 15px;
+}
+
+#pageTitle {
+  text-align: center;
+  padding-bottom: 14px;
+  font-size: 22px;
 }
 
 img {
-  height: 100px;
+  width: 100%;
+  padding: 10px 0;
 }
+
 
 /* TABLET STYLES */
 
@@ -81,11 +96,20 @@ img {
 
   .siteName {
     display: flex;
-    margin-top: 15px;
+    margin-top: 10px;
+  }
+
+  .siteName h2 {
+    font-size: 26px;
   }
 
   .siteName h2:last-of-type {
     margin: 0 -12px;
+  }
+
+  nav a {
+    font-size: 24px;
+    line-height: 80px;
   }
 }
 
@@ -93,26 +117,39 @@ img {
 /* DESKTOP STYLES */
 
 @media screen and (min-width: 1000px) {
-  nav {
-    width: 100%;
-    transform: none;
-    padding-top: 0;
-    display: flex;
-    justify-content: center;
-
-  }
 
   #menuToggler {
     display: none;
   }
 
+  nav {
+    display: flex;
+    height: auto;
+    width: auto;
+    right: 0;
+    transform: translateX(0%)
+  }
+
   header {
-    width: 100%;
+    display: flex;
   }
 
 
+  nav ul {
+    display: flex;
+    justify-content: center;
+    color: beige;
+    font-size: 20px;
+    line-height: 60px;
+
+  }
+
   main {
     padding-top: 0;
+  }
+
+  img {
+    width: 600px;
   }
 
 }
