--- a/css/styles.css
+++ b/css/styles.css
@@ -33,32 +33,33 @@ header {
 
 #menuToggler {
   position: fixed;
-  top: 0;
   right: 0;
-  padding: 5px 20px;
+  top: 0;
+  z-index: 1;
+  padding-right: 10px;
   color: white;
   font-size: 40px;
 }
 
+
 nav {
   display: flex;
-  overflow: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: fixed;
+  background: black;
   width: 100%;
+  top: 0;
   height: 100%;
   transform: translateX(100%);
   transition: 0.5s;
-  background: black;
-  align-items: center;
-  justify-content: center;
 }
 
 nav a {
-  display: flex;
-  justify-content: center;
   color: beige;
   font-size: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 nav.open {
@@ -68,7 +69,7 @@ nav.open {
 .active {
   background: white;
   color: black;
-  font-weight: bold;
+  padding: 5px;
   border-radius: 10px;
 }
 
@@ -106,8 +107,8 @@ img {
   }
 
   nav a {
-    font-size: 24px;
-    line-height: 80px;
+    font-size: 26px;
+    margin: 30px 0 30px 0;
   }
 }
 
@@ -120,30 +121,26 @@ img {
     display: none;
   }
 
-  nav {
+  header {
     display: flex;
-    width: auto;
-    top: 0;
-    right: 0;
-    height: 35px;
-    padding-top: 30px;
-
+    flex-direction: row;
   }
 
-  nav ul {
-    display: flex;
 
+  nav {
+    display: flex;
+    flex-direction: row;
+    margin: 20px 5px;
+    height: 20px;
+    width: auto;
+    right: 0;
+    transform: translateX(0%)
   }
 
   nav a {
-    text-decoration: none;
-    margin-right: 20px;
-    color: white;
+    margin: 5px;
   }
 
-  main {
-    padding-top: 0;
-  }
 
   img {
     width: 600px;
