--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,10 @@ img {
   text-decoration: underline;
 }
 
+.RTX-3090 {
+  padding: 20px 0;
+}
+
 /* TABLET STYLES */
 
 @media screen and (min-width: 500px) {
