--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,14 @@ img {
   text-align: center;
 }
 
+.pros h2 {
+  color: green;
+}
+
+.cons h2 {
+  color: #DC191B;
+}
+
 .pros ul,
 .cons ul {
   list-style-type: none;
@@ -140,10 +148,24 @@ img {
   text-align: center;
 }
 
-.extraVideocards span {
-  display: flex;
-  justify-content: center;
+.extraVideocards {
+  text-align: center;
 }
+
+.extraVideocards span {
+  display: inline-block;
+  background-color: #DC191B;
+  color: white;
+  padding: 1px 30px;
+}
+
+.extraVideocards .red-line {
+  width: 100%;
+  height: 5px;
+  background-color: #DC191B;
+  margin-top: -3px;
+}
+
 
 .RX-7900 {
   padding: 20px 0;
@@ -216,7 +238,7 @@ img {
   .pros-cons-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto;
     gap: 20px;
     max-width: 730px;
   }
@@ -290,10 +312,7 @@ img {
 
   .theVideoCards h4 {
     text-align: center;
-
   }
-
-
 
   .videoCardImg img {
     display: flex;
@@ -304,9 +323,8 @@ img {
   #videoCard {
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto;
   }
-
 
   .videoCard-title {
     grid-column: 1 / -1;
@@ -322,7 +340,7 @@ img {
   }
 
   .videoCard-specifications p {
-    margin-top: 7px;
+    margin-bottom: 7px;
   }
 
   .extraVideocardsImg {
@@ -332,4 +350,22 @@ img {
   .price {
     color: red;
   }
+
+  .pros-cons-container {
+    gap: 120px;
+  }
+
+  #videoCard-text {
+    max-width: 900px;
+  }
+
+  .buy-videocard-container {
+    gap: 150px;
+  }
+
+  .extraVideocards {
+    display: contents;
+  }
+
+
 }
