--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,7 @@ img {
   nav {
     display: flex;
     flex-direction: row;
-    margin: 20px 5px;
+    margin: 20px;
     height: 20px;
     width: auto;
     right: 0;
@@ -284,8 +284,28 @@ img {
   }
 
   nav a {
+    position: relative;
     margin: 5px 10px;
     font-size: 18px;
+  }
+
+  nav a::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: beige;
+    transition: .3s;
+  }
+
+  nav a:hover::before {
+    width: 100%;
+  }
+
+  .active:hover::before {
+    width: 0%;
   }
 
   main {
@@ -306,7 +326,6 @@ img {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-
   }
 
   .videoCard-title {
@@ -342,29 +361,62 @@ img {
     gap: 150px;
   }
 
+  .buy-videocard-container a {
+    background-color: #cc311e;
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    font-weight: bold;
+    border-radius: 4px;
+    margin-right: 10px;
+    transition: background-color 0.5s;
+  }
+
+  .buy-videocard-container a:hover {
+    background-color: #347911;
+  }
+
   .extraVideocards {
     display: contents;
   }
 
   .theVideoCards {
     display: grid;
-    grid-template-rows: auto;
+    grid-template-rows: 200px 1fr auto;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
   }
 
+
   .theVideoCards img {
     width: 90%;
+    height: 100%;
   }
 
+
   .theVideoCards section {
-    flex-direction: column;
+    display: inline-block;
     margin: 0;
     gap: 0;
   }
 
+  .theVideoCards a {
+    transition: 0.8s;
+  }
+
+  .theVideoCards a:hover {
+    background-color: #DC191B;
+    color: #f5f5f5;
+    padding: 5px;
+    border-radius: 3px;
+  }
+
   .theVideoCards p {
     margin: 10px 0;
+  }
+
+  .theVideoCards section p {
+    margin: 0 0 10px;
   }
 
 }
