--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ header {
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 1;
+  z-index: 3;
   padding-right: 10px;
   color: white;
   font-size: 40px;
@@ -54,6 +54,7 @@ nav {
   height: 100%;
   transform: translateX(100%);
   transition: 0.5s;
+  z-index: 2;
 }
 
 nav a {
@@ -188,7 +189,67 @@ img {
 }
 
 
-/* TABLET STYLES */
+/* ENTERTAIMENT PAGE */
+
+#no-padding {
+  padding: 0;
+  overflow: hidden;
+}
+
+.hexagon {
+  width: 50px;
+  height: 30px;
+  background-color: transparent;
+  position: absolute;
+  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+  animation: moveAround 60s infinite linear;
+  box-shadow: inset 0 0 20px 10px #b5d8e9;
+  opacity: 50%;
+  z-index: -1;
+}
+
+@keyframes moveAround {
+
+  0%,
+  100% {
+    transform: translate(var(--x0), var(--y0));
+  }
+
+  25% {
+    transform: translate(var(--x25), var(--y25));
+  }
+
+  50% {
+    transform: translate(var(--x50), var(--y50));
+  }
+
+  75% {
+    transform: translate(var(--x75), var(--y75));
+  }
+}
+
+#backgroundImg {
+  position: relative;
+  display: flex;
+  background-color: #131314;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+}
+
+#backgroundImg img {
+  width: 60%;
+  height: 200px;
+  border-radius: 50%;
+  z-index: 0;
+}
+
+
+.content {
+  padding: 20px;
+}
 
 @media screen and (min-width: 500px) {
 
