--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ header {
   position: fixed;
   height: 65px;
   width: 100%;
+  z-index: 2;
 }
 
 .siteName h2 {
@@ -248,6 +249,44 @@ img {
 
 .content {
   padding: 20px;
+}
+
+.slideshow-container {
+  position: relative;
+  max-width: 650px;
+  height: 25%;
+  justify-content: center;
+  align-items: center;
+}
+
+.mySlides img {
+  width: 100%;
+}
+
+.prev,
+.next {
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  color: black;
+  font-weight: bolder;
+  font-size: 26px;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+}
+
+.prev {
+  left: 0;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: white;
+  opacity: 0.7;
 }
 
 @media screen and (min-width: 500px) {
