--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 body {
   font-family: "Nunito", sans-serif;
   background: #e6eef9;
+  font-size: 14px;
 }
 
 header {
@@ -244,19 +245,19 @@ img {
 }
 
 #backgroundImg img {
-  width: 60%;
-  height: 200px;
+  width: 70%;
+  height: 180px;
   border-radius: 50%;
   z-index: 0;
 }
 
 .content {
   padding: 0 20px;
+  padding-bottom: 5vh;
 }
 
 .slideshow-container {
   position: relative;
-  max-width: 650px;
 }
 
 .content h2 {
@@ -320,11 +321,12 @@ img {
   color: #333;
 }
 
-#apple-content a {
+.link {
   color: #0073e6;
+  text-decoration: none;
 }
 
-#apple-content a:hover {
+.link:hover {
   text-decoration: underline;
 }
 
@@ -334,8 +336,6 @@ img {
 
 
 #moonwalkers img {
-  padding: 40px 0;
-
   border-radius: 0;
   height: 60vh;
 }
@@ -350,6 +350,17 @@ img {
 
 
 @media screen and (min-width: 500px) {
+  body {
+    font-size: 16px;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
 
   img {
     width: 80%;
@@ -420,12 +431,60 @@ img {
     margin: 3px;
   }
 
+  /* ENTERTAIMENT */
+
+  #backgroundImg img {
+    width: 50%;
+    height: 30%;
+  }
+
+  .slideshow-container {
+    max-width: 650px;
+
+  }
+
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    max-width: 750px;
+    margin: 0 auto;
+  }
+
+  #apple-vision-pro>p,
+  .subtitle {
+    text-align: center;
+  }
+
+  .slideshow-container {
+    text-align: center;
+  }
+
+  .content section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+
 }
 
 
 /* DESKTOP STYLES */
 
 @media screen and (min-width: 1000px) {
+
+  body {
+    font-size: 18px;
+  }
+
+  h1 {
+    font-size: 38px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
 
   #menuToggler {
     display: none;
